# PhotoAI

./: .gitignore
deploy/: .env.example  docker-compose.yml
docs/: PhotoAI_Android前端设计文档.md
docs/PhotoAI_产品开发文档包/: PhotoAI_MVP功能清单_数据库设计_模块拆分.md  README.md  develop.md
docs/spec/: 00_文档索引.md  01_产品范围与MVP.md  02_系统架构与开发顺序.md  03_后端执行文档.md  04_数据库设计.md  05_API接口规范.md  06_Android执行文档.md  07_AI任务与Worker.md  08_部署配置与验收.md
server/: Dockerfile  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_p0_schema.py
server/app/: __init__.py  cli.py  main.py  models.py
server/app/api/: deps.py  router.py
server/app/assets/: router.py
server/app/auth/: router.py
server/app/common/: errors.py  middleware.py  responses.py  security.py
server/app/config/: settings.py
server/app/db/: session.py
server/app/health/: __init__.py  router.py
server/app/storage/: local.py
server/app/upload/: router.py
server/tests/: test_app_routes.py  test_security.py  test_storage.py  test_upload_helpers.py
